fixed buton width on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -418,7 +418,7 @@ button:active {
   }
   button {
     font-size: 1rem;
-    width: 200px;
+    width: 150px;
     padding: 0.5em 0.5em;
   }
 
@@ -487,3 +487,7 @@ button:active {
     padding: 1rem;
   }
 }
+
+
+/* phones */
+
